Add bStats and migrate to Java 21